<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application label -->
    <string name="app_name">NightMode</string>
    <string name="nightly_title">Night Manager</string>
    <string name="nightly_app_selector">White List</string>

    <!-- Preference classify -->
    <string name="preference">Preference</string>
    <string name="preference_auto_start">Autostart Service</string>
    <string name="preference_autostart_tips">Configure if service run on startup</string>
    <string name="preference_notification">Notification</string>
    <string name="preference_notification_tips">Configue if Manager show notification</string>
    <string name="preference_floatwidget">Float Widget</string>
    <string name="preference_floatwidget_tips">Configure if show float controller</string>
    <string name="preference_nightly_mode">Night mode</string>
    <string name="preference_mask_alpha">Mask Alpha</string>
    <string name="preference_mask_alpha_tips">Configure night alpha</string>
    <string name="preference_mask_color">Mask Color</string>
    <string name="preference_mask_color_tips">Configure night color</string>
    <string name="preference_alert_night">Nighttime remind</string>
    <string name="preference_alert_night_tips">Remind when nighttime is up</string>

    <!-- AutoNight classify -->
    <string name="auto_nightly">Auto Night</string>
    <string name="auto_nightly_time_buckets">Autostart in time buckets</string>
    <string name="auto_nightly_time_tips">Autostart alarm time</string>
    <string name="auto_nightly_for_all">Global autostart</string>
    <string name="auto_nightly_for_all_tips">Auto mode apply for all apps</string>
    <string name="auto_nightly_white_list">White list</string>
    <string name="auto_nightly_white_list_tips">Auto-mode only support apps in White-list</string>

    <!-- Information classify -->
    <string name="information">Information</string>
    <string name="information_feedback">Feedback</string>
    <string name="information_feedback_email">E-mail: rakkang@qq.com</string>
    <string name="information_about">About</string>
    <string name="information_about_author">Author: kang.ruikye</string>

    <!-- Translation strings -->
    <string name="defualt_string">Default</string>
    <string name="current_string">Current</string>
    <string name="service_started">Night service started</string>
    <string name="service_stoped">Night service stoped</string>

    <string-array name="night_mode">
        <item name="night_mode_auto">auto mode</item>
        <item name="night_mode_nightly">nightly</item>
        <item name="night_mode_normal">disable</item>
    </string-array>

    <string name="night_notification_tips">Touch for NightMode configuration</string>

    <string name="night_alpha_min_value">10%</string>
    <string name="night_alpha_max_value">90%</string>

    <string name="license">Open Source</string>
    <string name="open_source">https://github.com/rakkang/nightlymode</string>

    <string name="night_darkness_label">～ Getting dark ～</string>
    <string name="night_darkness_tips">"It's getting dark\nDo you want to switch to night mode?"</string>
    <string name="night_sunshine_label">~ Day breaks ～</string>
    <string name="night_sunshine_tips">"Day breaks\nDo you want to switch to day mode?"</string>
    <string name="night_btn_ignore">Ignore</string>
    <string name="night_btn_yes">Yes</string>
    <string name="night_btn_close">Yes</string>
    <string name="night_btn_later">Delay</string>
    <string name="night_btn_auto_start">Auto start，no remind</string>
    <string name="night_btn_auto_close">Auto stop, no remind</string>

    <string name="night_controller_alpha">alpha</string>
    <string name="night_controller_brightness">brightness</string>

</resources>
